--- a/apps/musicfun-rtk-query/src/shared/translations/languages/ru.json
+++ b/apps/musicfun-rtk-query/src/shared/translations/languages/ru.json
@@ -1,9 +1,31 @@
 {
+  "artists": {
+    "label": "Артисты",
+    "placeholder": "Поиск по артистам"
+  },
+  "auth": {
+    "button": {
+      "continue_without_sign_in": "Продолжить без входа",
+      "sign_in": "Войти",
+      "sign_in_with_apihub": "Войти через APIHub"
+    },
+    "title": {
+      "logout": "Выйти",
+      "my_profile": "Мой профиль"
+    }
+  },
+  "button": {
+    "choose": "Выбрать",
+    "create": "Создать",
+    "edit": "Редактировать"
+  },
   "description": {
     "label": {
       "description": "Описание"
     },
-    "max_value": "Описание должно содержать менее {{ quantity }} символов"
+    "title": {
+      "max_value": "Описание должно быть короче {{ quantity }} символов"
+    }
   },
   "playlists": {
     "button": {
@@ -15,22 +37,46 @@
       "search_playlist": "Поиск плейлиста"
     },
     "title": {
+      "all_playlists": "Все плейлисты",
       "create_playlist": "Создать плейлист",
       "edit_playlist": "Редактировать плейлист",
       "new_playlists": "Новые плейлисты",
-      "not_found_playlists": "Плейлисты не найдены"
+      "playlists_not_found": "Плейлисты не найдены"
     }
   },
+  "tags": {
+    "label": "Хэштеги",
+    "placeholder": "Поиск по хэштегам"
+  },
   "title": {
-    "max_value": "Название должно содержать менее {{ quantity }} символов",
+    "max_value": "Название должно быть короче {{ quantity }} символов",
     "min_value": "Название должно содержать не менее {{ quantity }} символов",
     "required": "Название обязательно"
   },
   "tracks": {
+    "button": {
+      "add_to_playlist": "Добавить в плейлист",
+      "all_tracks": "Все треки",
+      "cancel": "Отмена",
+      "create": "Создать",
+      "edit": "Редактировать",
+      "save": "Сохранить",
+      "show_text_song": "Показать текст песни",
+      "tracks_not_found": "Треки не найдены",
+      "upload": "Загрузить"
+    },
+    "label": {
+      "lyrics": "Текст песни",
+      "title": "Название"
+    },
     "placeholder": {
-      "search_tracks": "Поиск треков"
+      "lyrics": "Введите текст песни",
+      "search_tracks": "Поиск треков",
+      "title": "Введите название трека"
     },
     "title": {
+      "create": "Создать трек",
+      "edit": "Редактировать трек",
       "new_tracks": "Новые треки"
     }
   }
