--- a/apps/musicfun-rtk-query/src/shared/translations/languages/ru.json
+++ b/apps/musicfun-rtk-query/src/shared/translations/languages/ru.json
@@ -52,6 +52,12 @@
     "upload_track": "Загрузить трек",
     "your_library": "Ваша библиотека"
   },
+  "tabs": {
+    "playlists": "Плейлисты",
+    "tracks": "Треки",
+    "liked_playlists": "Любимые плейлисты",
+    "liked_tracks": "Любимые треки"
+  },
   "tags": {
     "label": "Хэштеги",
     "placeholder": "Поиск по хэштегам"
@@ -59,7 +65,8 @@
   "title": {
     "max_value": "Название должно быть короче {{ quantity }} символов",
     "min_value": "Название должно содержать не менее {{ quantity }} символов",
-    "required": "Название обязательно"
+    "required": "Название обязательно",
+    "title": "Название"
   },
   "tracks": {
     "button": {
@@ -83,6 +90,7 @@
       "title": "Введите название трека"
     },
     "title": {
+      "all_tracks": "Все треки",
       "create": "Создать трек",
       "edit": "Редактировать трек",
       "new_tracks": "Новые треки"
